--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 24 10:55:16 BDT 2022
-sdk.dir=/Users/fayjulislammanik/Library/Android/sdk
+#Sat Dec 24 14:23:35 BDT 2022
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
