--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,26 @@
         android:theme="@style/Theme.FinalProject"
         tools:targetApi="31">
         <activity
+            android:name=".UserProfile"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Home"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".PlaceYourOrderActivity"
-            android:exported="true"/>
-        <activity android:name=".RestaurantMenuActivity"
-            android:exported="true"/>
-
-        <activity android:name=".OrderSucceessActivity"></activity>
+        <activity
+            android:name=".PlaceYourOrderActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RestaurantMenuActivity"
+            android:exported="true" />
+        <activity android:name=".OrderSucceessActivity" />
         <activity
             android:name=".SignIn"
             android:exported="false">
